--- a/style.css
+++ b/style.css
@@ -393,3 +393,11 @@ header h1 {
   stroke-width: 4;
   filter: drop-shadow(0 0 6px red);
 }
+.ghostface-part {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.ghostface-part.show {
+  opacity: 1;
+}
